Ajustes en la plantilla de amazon y shein

--- a/src/app/demo/components/upload-ptos/upload-ptos.component.html
+++ b/src/app/demo/components/upload-ptos/upload-ptos.component.html
@@ -1,4 +1,4 @@
-<p-toast position="top-center" key="tc"></p-toast>
+<p-toast position="bottom-center" key="tc"></p-toast>
 <p-toolbar styleClass="mb-4">
     <ng-template pTemplate="left">
         <div class="my-2 mr-2">
